--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,7 +18,7 @@ env:
   MACOSX_DEPLOYMENT_TARGET: "11.1"
   RUST_BACKTRACE: "full"
   targets: >-
-    x86_64-pc-windows-gnullvm
+    x86_64-win7-windows-gnullvm
     aarch64-pc-windows-gnullvm
     x86_64-unknown-linux-gnu
     aarch64-unknown-linux-gnu
@@ -93,7 +93,7 @@ jobs:
       run: |
         mkdir -p .cargo
         cp -f build/config.toml .cargo/config.toml
-        cargo +nightly zigbuild --release --target $(echo $(echo "$targets" | tr '\n' ' ') | sed 's/ / --target /g' | sed 's/-linux-gnu/-linux-gnu.2.17/g' )
+        cargo +nightly zigbuild --release --target $(echo $(echo "$targets" | tr '\n' ' ') | sed 's/ / --target /g' | sed 's/-linux-gnu/-linux-gnu.2.17/g' ) -Zbuild-std
         rm -r -f .cargo
     - name: Assemble Artifact
       run: cargo run -p assemble
@@ -114,7 +114,7 @@ jobs:
       id: upload-artifacts
       run: |
         declare -A win_artifacts
-        win_artifacts["x86_64-pc-windows-gnullvm/release/terracotta.exe"]="terracotta-${TERRACOTTA_VERSION}-windows-x86_64.exe"
+        win_artifacts["x86_64-win7-windows-gnullvm/release/terracotta.exe"]="terracotta-${TERRACOTTA_VERSION}-windows-x86_64.exe"
         win_artifacts["aarch64-pc-windows-gnullvm/release/terracotta.exe"]="terracotta-${TERRACOTTA_VERSION}-windows-arm64.exe"
 
         for artifact in "${!win_artifacts[@]}"; do
