--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -55,6 +55,8 @@ jobs:
         if ! command -v cargo &> /dev/null; then
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal --default-toolchain nightly-x86_64-unknown-linux-gnu
           echo PATH=$PATH:$HOME/.cargo/bin >> $GITHUB_ENV
+        else
+          rustup component add rust-src --toolchain nightly-x86_64-unknown-linux-gnu
         fi
     - name: Generate Cache Key
       run: cargo generate-lockfile
