--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -50,13 +50,15 @@ jobs:
         chmod +x target/bin/llvm-windres-aarch64-w64-mingw32.sh
     - name: Install Zig
       uses: mlugg/setup-zig@v2
+      with:
+        cache-size-limit: 4096
     - name: Install Rustup
       run: |
         if ! command -v cargo &> /dev/null; then
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal --default-toolchain nightly-x86_64-unknown-linux-gnu
           echo PATH=$PATH:$HOME/.cargo/bin >> $GITHUB_ENV
         else
-          rustup component add rust-src --toolchain x86_64-unknown-linux-gnu
+          rustup component add rust-src --toolchain nightly-x86_64-unknown-linux-gnu
         fi
     - name: Generate Cache Key
       run: cargo generate-lockfile
@@ -92,7 +94,7 @@ jobs:
       run: |
         mkdir -p .cargo
         cp -f build/config.toml .cargo/config.toml
-        cargo +nightly zigbuild -Z build-std --release --target $(echo $(echo "$targets" | tr '\n' ' ') | sed 's/ / --target /g' | sed 's/-linux-gnu/-linux-gnu.2.17/g' )
+        cargo +nightly zigbuild -Z build-std=core,std,alloc,proc_macro,panic_abort --release --target $(echo $(echo "$targets" | tr '\n' ' ') | sed 's/ / --target /g' | sed 's/-linux-gnu/-linux-gnu.2.17/g' )
         rm -r -f .cargo
     - name: Assemble Artifact
       run: cargo run -p assemble
