--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ chrono = { version = "0.4.41", default-features = false, features = [
 lazy_static = "1.5.0"
 libc = "0.2.174"
 local-ip-address = "0.6.5"
+native-dialog = "0.9.0"
 num-bigint = "0.4.6"
 open = { version = "5.3.2", default-features = false }
 rand_core = { version = "0.9.3", features = ["os_rng"] }
