--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,6 +21,8 @@ env:
     aarch64-pc-windows-gnullvm
     x86_64-unknown-linux-gnu
     aarch64-unknown-linux-gnu
+    loongarch64-unknown-linux-gnu
+    riscv64gc-unknown-linux-gnu
     x86_64-apple-darwin
     aarch64-apple-darwin
 
