--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,6 +16,10 @@ env:
   name: "terracotta"
   RUST_BACKTRACE: "full"
 
+defaults:
+  run:
+    shell: "bash"
+
 jobs:
   windows-x86_64:
     runs-on: windows-latest
@@ -40,7 +44,8 @@ jobs:
         run: |
           source="terracotta-${TERRACOTTA_VERSION}-windows-x86_64.exe"
           cp "target/release/terracotta.exe" "$source"
-          zip -q - "$source" | gh-actions-artifact-client.js upload "$source"
+          tar acvf "$source.tar" "$source"
+          cat "$source.tar" | gh-actions-artifact-client.js upload "$source"
   windows-arm64:
     runs-on: windows-latest
     name: Build for Windows arm64
@@ -64,9 +69,10 @@ jobs:
           cargo +nightly build --release
       - name: Upload Artifact
         run: |
-          source="terracotta-${TERRACOTTA_VERSION}-windows-arm64.exe"
-          cp "target/aarch64-pc-windows-msvc/release/terracotta.exe" "$source"
-          zip -q - "$source" | gh-actions-artifact-client.js upload "$source"
+          source="terracotta-${TERRACOTTA_VERSION}-windows-x86_64.exe"
+          cp "target/release/terracotta.exe" "$source"
+          tar acvf "$source.tar" "$source"
+          cat "$source.tar" | gh-actions-artifact-client.js upload "$source"
   linux-x86_64:
     runs-on: ubuntu-latest
     name: Build for Linux x86_64
