--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -94,6 +94,12 @@ jobs:
           cargo +nightly build --release
       - name: Upload Artifact
         run: |
+          source="terracotta-${TERRACOTTA_VERSION}-linux-x86_64"
+          
+          cp "target/release/terracotta" "$source"
+          tar -cf "$source" "$source.tar"
+          zip -q - "$source.tar" | gh-actions-artifact-client.js upload "$source.tar"
+          
           wget -O linux-deploy.AppImage https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
           chmod +x linux-deploy.AppImage
           ./linux-deploy.AppImage --appdir="$(mktemp -d)" \
@@ -101,11 +107,10 @@ jobs:
             --icon-file=build/linux/icon.png \
             -e "target/release/terracotta" \
             --output=appimage
-
-          source="terracotta-${TERRACOTTA_VERSION}-linux-x86_64.AppImage"
-          mv "Terracotta-x86_64.AppImage" "$source"
-          chmod 755 "$source"
-          zip -q - "$source" | gh-actions-artifact-client.js upload "${source}"
+          
+          mv "Terracotta-aarch64.AppImage" "$source.AppImage"
+          chmod 755 "$source.AppImage"
+          zip -q - "$source.AppImage" | gh-actions-artifact-client.js upload "$source.AppImage"
   linux-arm64:
     runs-on: ubuntu-24.04-arm
     name: Build for Linux arm64
@@ -127,6 +132,12 @@ jobs:
           cargo +nightly build --release
       - name: Upload Artifact
         run: |
+          source="terracotta-${TERRACOTTA_VERSION}-linux-arm64"
+          
+          cp "target/release/terracotta" "$source"
+          tar -cf "$source" "$source.tar"
+          zip -q - "$source.tar" | gh-actions-artifact-client.js upload "$source.tar"
+          
           wget -O linux-deploy.AppImage https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-aarch64.AppImage
           chmod +x linux-deploy.AppImage
           ./linux-deploy.AppImage --appdir="$(mktemp -d)" \
@@ -134,11 +145,10 @@ jobs:
             --icon-file=build/linux/icon.png \
             -e "target/release/terracotta" \
             --output=appimage
-
-          source="terracotta-${TERRACOTTA_VERSION}-linux-arm64.AppImage"
-          mv "Terracotta-aarch64.AppImage" "$source"
-          chmod 755 "$source"
-          zip -q - "$source" | gh-actions-artifact-client.js upload "${source}"
+         
+          mv "Terracotta-aarch64.AppImage" "$source.AppImage"
+          chmod 755 "$source.AppImage"
+          zip -q - "$source.AppImage" | gh-actions-artifact-client.js upload "$source.AppImage"
   macos-x86_64:
     runs-on: macos-13
     name: Build for MacOS x86_64
@@ -160,6 +170,12 @@ jobs:
           cargo +nightly build --release
       - name: Upload Artifact
         run: |
+          source="terracotta-${TERRACOTTA_VERSION}-macos-x86_64.tar"
+          
+          cp "target/release/terracotta" "$source"
+          tar -cf "$source" "$source.tar"
+          zip -q - "$source.tar" | gh-actions-artifact-client.js upload "$source.tar"
+          
           chmod -R 755 build/macos/scripts
           TEMP_DIR=$(mktemp -d)
           mkdir -p "$TEMP_DIR"
@@ -169,7 +185,7 @@ jobs:
           cp "target/release/terracotta" "$TEMP_DIR/terracotta.app/Contents/MacOS/terracotta"
           
           chmod -R 755 "$TEMP_DIR/"
-          PKG_OUTPUT="terracotta-${TERRACOTTA_VERSION}-macos-x86_64.pkg"
+          PKG_OUTPUT="$source.pkg"
           
           pkgbuild \
             --root "$TEMP_DIR" \
@@ -179,7 +195,7 @@ jobs:
             --scripts build/macos/scripts \
             --component-plist build/macos/terracotta.plist \
             "$PKG_OUTPUT"
-          zip -q - $PKG_OUTPUT | gh-actions-artifact-client.js upload "terracotta-${TERRACOTTA_VERSION}-macos-x86_64.pkg"
+          zip -q - $PKG_OUTPUT | gh-actions-artifact-client.js upload "$source.pkg"
   macos-arm64:
     runs-on: macos-latest
     name: Build for MacOS arm64
@@ -201,6 +217,12 @@ jobs:
           cargo +nightly build --release
       - name: Upload Artifact
         run: |
+          source="terracotta-${TERRACOTTA_VERSION}-macos-arm64.tar"
+          
+          cp "target/release/terracotta" "$source"
+          tar -cf "$source" "$source.tar"
+          zip -q - "$source.tar" | gh-actions-artifact-client.js upload "$source.tar"
+          
           chmod -R 755 build/macos/scripts
           TEMP_DIR=$(mktemp -d)
           mkdir -p "$TEMP_DIR"
@@ -210,7 +232,7 @@ jobs:
           cp "target/release/terracotta" "$TEMP_DIR/terracotta.app/Contents/MacOS/terracotta"
           
           chmod -R 755 "$TEMP_DIR/"
-          PKG_OUTPUT="terracotta-${TERRACOTTA_VERSION}-macos-arm64.pkg"
+          PKG_OUTPUT="$source.pkg"
           
           pkgbuild \
             --root "$TEMP_DIR" \
@@ -220,4 +242,4 @@ jobs:
             --scripts build/macos/scripts \
             --component-plist build/macos/terracotta.plist \
             "$PKG_OUTPUT"
-          zip -q - $PKG_OUTPUT | gh-actions-artifact-client.js upload "terracotta-${TERRACOTTA_VERSION}-macos-arm64.pkg"
+          zip -q - $PKG_OUTPUT | gh-actions-artifact-client.js upload "$source.pkg"
