--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,6 +39,7 @@ jobs:
       - name: Build
         run: |
           rustup target add --toolchain nightly x86_64-pc-windows-gnu
+          rustup component add rust-src
           cargo +nightly build --release \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
             -Z build-std-features=default,panic_immediate_abort,optimize_for_size
@@ -66,8 +67,9 @@ jobs:
       - name: Build
         run: |
           cargo install cargo-xwin
-          rustup component add llvm-tools
           rustup target add --toolchain nightly aarch64-pc-windows-msvc
+          rustup component add llvm-tools
+          rustup component add rust-src
           cargo +nightly build --release \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
             -Z build-std-features=default,panic_immediate_abort,optimize_for_size
@@ -95,6 +97,7 @@ jobs:
       - name: Build
         run: |
           rustup target add --toolchain nightly x86_64-unknown-linux-gnu
+          rustup component add rust-src
           cargo +nightly build --release \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
             -Z build-std-features=default,panic_immediate_abort,optimize_for_size
@@ -136,6 +139,7 @@ jobs:
       - name: Build
         run: |
           rustup target add --toolchain nightly aarch64-unknown-linux-gnu
+          rustup component add rust-src
           cargo +nightly build --release \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
             -Z build-std-features=default,panic_immediate_abort,optimize_for_size
@@ -177,6 +181,7 @@ jobs:
       - name: Build
         run: |
           rustup target add --toolchain nightly x86_64-apple-darwin
+          rustup component add rust-src
           cargo +nightly build --release \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
             -Z build-std-features=default,panic_immediate_abort,optimize_for_size
@@ -227,6 +232,7 @@ jobs:
       - name: Build
         run: |
           rustup target add --toolchain nightly aarch64-apple-darwin
+          rustup component add rust-src
           cargo +nightly build --release \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
             -Z build-std-features=default,panic_immediate_abort,optimize_for_size
