--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: Build
         run: |
           rustup target add --toolchain nightly x86_64-pc-windows-gnu
-          rustup component add rust-src
+          rustup component add rust-src --toolchain nightly-x86_64-pc-windows-gnu
           cargo +nightly build --release \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
             -Z build-std-features=default,panic_immediate_abort,optimize_for_size
@@ -69,7 +69,7 @@ jobs:
           cargo install cargo-xwin
           rustup target add --toolchain nightly aarch64-pc-windows-msvc
           rustup component add llvm-tools
-          rustup component add rust-src
+          rustup component add rust-src --toolchain nightly-aarch64-pc-windows-msvc
           cargo +nightly build --release \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
             -Z build-std-features=default,panic_immediate_abort,optimize_for_size
@@ -97,7 +97,7 @@ jobs:
       - name: Build
         run: |
           rustup target add --toolchain nightly x86_64-unknown-linux-gnu
-          rustup component add rust-src
+          rustup component add rust-src --toolchain nightly-x86_64-unknown-linux-gnu
           cargo +nightly build --release \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
             -Z build-std-features=default,panic_immediate_abort,optimize_for_size
@@ -139,7 +139,7 @@ jobs:
       - name: Build
         run: |
           rustup target add --toolchain nightly aarch64-unknown-linux-gnu
-          rustup component add rust-src
+          rustup component add rust-src --toolchain nightly-aarch64-unknown-linux-gnu
           cargo +nightly build --release \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
             -Z build-std-features=default,panic_immediate_abort,optimize_for_size
@@ -181,7 +181,7 @@ jobs:
       - name: Build
         run: |
           rustup target add --toolchain nightly x86_64-apple-darwin
-          rustup component add rust-src
+          rustup component add rust-src --toolchain nightly-x86_64-apple-darwin
           cargo +nightly build --release \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
             -Z build-std-features=default,panic_immediate_abort,optimize_for_size
@@ -232,7 +232,7 @@ jobs:
       - name: Build
         run: |
           rustup target add --toolchain nightly aarch64-apple-darwin
-          rustup component add rust-src
+          rustup component add rust-src --toolchain nightly-aarch64-apple-darwin
           cargo +nightly build --release \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
             -Z build-std-features=default,panic_immediate_abort,optimize_for_size
