--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,7 +21,7 @@ defaults:
     shell: "bash"
 
 jobs:
-  windows-x86_64:
+  build-windows-x86_64:
     runs-on: windows-latest
     name: Build for Windows x86_64
     steps:
@@ -49,7 +49,7 @@ jobs:
           cp "target/release/terracotta.exe" "$source"
           tar acvf "$source.tar" "$source"
           cat "$source.tar" | gh-actions-artifact-client.js upload "$source"
-  windows-arm64:
+  build-windows-arm64:
     runs-on: windows-11-arm
     name: Build for Windows arm64
     steps:
@@ -77,7 +77,7 @@ jobs:
           cp "target/release/terracotta.exe" "$source"
           tar acvf "$source.tar" "$source"
           cat "$source.tar" | gh-actions-artifact-client.js upload "$source"
-  linux-x86_64:
+  build-linux-x86_64:
     runs-on: ubuntu-latest
     name: Build for Linux x86_64
     steps:
@@ -119,7 +119,7 @@ jobs:
           mv "Terracotta-x86_64.AppImage" "$source.AppImage"
           chmod 755 "$source.AppImage"
           zip -q - "$source.AppImage" | gh-actions-artifact-client.js upload "$source.AppImage"
-  linux-arm64:
+  build-linux-arm64:
     runs-on: ubuntu-24.04-arm
     name: Build for Linux arm64
     steps:
@@ -161,7 +161,7 @@ jobs:
           mv "Terracotta-aarch64.AppImage" "$source.AppImage"
           chmod 755 "$source.AppImage"
           zip -q - "$source.AppImage" | gh-actions-artifact-client.js upload "$source.AppImage"
-  macos-x86_64:
+  build-macos-x86_64:
     runs-on: macos-13
     name: Build for MacOS x86_64
     steps:
@@ -212,7 +212,7 @@ jobs:
             --component-plist build/macos/terracotta.plist \
             "$PKG_OUTPUT"
           zip -q - $PKG_OUTPUT | gh-actions-artifact-client.js upload "$source.pkg"
-  macos-arm64:
+  build-macos-arm64:
     runs-on: macos-latest
     name: Build for MacOS arm64
     steps:
@@ -263,3 +263,49 @@ jobs:
             --component-plist build/macos/terracotta.plist \
             "$PKG_OUTPUT"
           zip -q - $PKG_OUTPUT | gh-actions-artifact-client.js upload "$source.pkg"
+  assemble-packages:
+    runs-on: ubuntu-latest
+    name: Build for Linux x86_64
+    needs: [build-windows-x86_64, build-windows-arm64, build-linux-x86_64, build-linux-arm64, build-macos-x86_64, build-macos-arm64]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install GitHub Artifact Client
+        uses: lhotari/gh-actions-artifact-client@v2
+      - name: Compute Version
+        run: |
+          if [ -z "${{ github.event.inputs.version }}" ]; then
+            echo "TERRACOTTA_VERSION=${GITHUB_SHA::7}" >> $GITHUB_ENV
+          else
+            echo "TERRACOTTA_VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
+          fi
+      - name: Assemble Artifacts
+        run: |
+          artifacts_direct=(
+            "terracotta-${TERRACOTTA_VERSION}-linux-x86_64.AppImage"
+            "terracotta-${TERRACOTTA_VERSION}-linux-arm64.AppImage"
+            "terracotta-${TERRACOTTA_VERSION}-windows-x86_64.exe"
+            "terracotta-${TERRACOTTA_VERSION}-windows-arm64.exe"
+            "terracotta-${TERRACOTTA_VERSION}-macos-x86_64.pkg"
+            "terracotta-${TERRACOTTA_VERSION}-macos-arm64.pkg"
+          )
+          artifacts_tar=(
+            "terracotta-${TERRACOTTA_VERSION}-linux-x86_64"
+            "terracotta-${TERRACOTTA_VERSION}-linux-arm64"
+            "terracotta-${TERRACOTTA_VERSION}-macos-x86_64"
+            "terracotta-${TERRACOTTA_VERSION}-macos-arm64"
+          )
+          
+          for artifact in "${artifacts_direct[@]}"; do
+            file=$(mktemp)
+            gh-actions-artifact-client.js download "$artifact" >> "$file"
+            unzip -p "$file" >> "$artifact"
+          done
+          for artifact in "${artifacts_tar[@]}"; do
+            file=$(mktemp)
+            gh-actions-artifact-client.js download "$artifact.tar" >> "$file"
+            unzip -p "$file" | tar -xOf - >> "$artifact"
+          done
+          
+          chmod 755 ./*
+          zip -r - . | gh-actions-artifact-client.js upload "terracotta-${TERRACOTTA_VERSION}-release"
