--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,8 +47,8 @@ jobs:
         run: |
           source="terracotta-${TERRACOTTA_VERSION}-windows-x86_64.exe"
           cp "target/release/terracotta.exe" "$source"
-          tar acvf "$source.tar" "$source"
-          cat "$source.tar" | gh-actions-artifact-client.js upload "$source"
+          tar acvf "$source.zip" "$source"
+          cat "$source.zip" | gh-actions-artifact-client.js upload "$source"
   build-windows-arm64:
     runs-on: windows-11-arm
     name: Build for Windows arm64
@@ -75,8 +75,8 @@ jobs:
         run: |
           source="terracotta-${TERRACOTTA_VERSION}-windows-arm64.exe"
           cp "target/release/terracotta.exe" "$source"
-          tar acvf "$source.tar" "$source"
-          cat "$source.tar" | gh-actions-artifact-client.js upload "$source"
+          tar acvf "$source.zip" "$source"
+          cat "$source.zip" | gh-actions-artifact-client.js upload "$source"
   build-linux-x86_64:
     runs-on: ubuntu-latest
     name: Build for Linux x86_64
