--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -272,8 +272,6 @@ jobs:
     name: Assemble Artifact
     needs: [build-windows-x86_64, build-windows-arm64, build-linux-x86_64, build-linux-arm64, build-macos-x86_64, build-macos-arm64]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
       - name: Install GitHub Artifact Client
         uses: lhotari/gh-actions-artifact-client@v2
       - name: Compute Version
@@ -310,5 +308,5 @@ jobs:
             unzip -p "$file" | tar -xOf - > "$artifact"
           done
           
-          chmod 755 ./*
-          zip -r - . | gh-actions-artifact-client.js upload "terracotta-${TERRACOTTA_VERSION}-release"
+          chmod 755 terracotta-${TERRACOTTA_VERSION}-*
+          zip -r - . | gh-actions-artifact-client.js upload "terracotta-${TERRACOTTA_VERSION}-all"
