--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -274,6 +274,10 @@ jobs:
     steps:
       - name: Install GitHub Artifact Client
         uses: lhotari/gh-actions-artifact-client@v2
+      - name: Install 7z
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y p7zip-full
       - name: Compute Version
         run: |
           if [ -z "${{ github.event.inputs.version }}" ]; then
@@ -309,4 +313,5 @@ jobs:
           done
           
           chmod 755 terracotta-${TERRACOTTA_VERSION}-*
-          zip -r - . | gh-actions-artifact-client.js upload "terracotta-${TERRACOTTA_VERSION}-all"
+          7z a -ms=on -m0=LZMA2 -m1=BCJ:x86 -m1=BCJ:ARM -mx=9 terracotta.7z terracotta-${TERRACOTTA_VERSION}-*
+          zip -r - terracotta.7z | gh-actions-artifact-client.js upload "terracotta-${TERRACOTTA_VERSION}-all"
