--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -314,4 +314,4 @@ jobs:
           
           chmod 755 terracotta-${TERRACOTTA_VERSION}-*
           7z -m0=LZMA2 -mx=9 -ms=on a terracotta.7z terracotta-${TERRACOTTA_VERSION}-*
-          zip -r - terracotta.7z | gh-actions-artifact-client.js upload "terracotta-${TERRACOTTA_VERSION}-all"
+          zip -r - terracotta.7z | gh-actions-artifact-client.js upload "terracotta-${TERRACOTTA_VERSION}-all.7z"
