--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,8 +31,8 @@ sevenz-rust2 = { version = "0.18.0", default-features = false, features = [
     "util",
 ] }
 socket2 = "0.6.0"
-winapi = { version = "0.3.9", default-features = false, features = ["winbase", "wincon", "handleapi", "processenv", "consoleapi", "sysinfoapi", "tlhelp32", "synchapi", "processthreadsapi"] }
-reqwest = { version = "0.12.22", default-features = false, features = ["charset", "http2", "rustls-tls", "deflate", "blocking"]}
+winapi = { version = "0.3.9", default-features = false, features = ["winbase", "wincon", "handleapi", "processenv", "consoleapi", "sysinfoapi", "tlhelp32", "synchapi", "processthreadsapi", "minwindef", "winnt"] }
+reqwest = { version = "0.12.22", default-features = false, features = ["charset", "http2", "rustls-tls", "deflate", "blocking"] }
 timestamp = { path = "timestamp" }
 hex = "0.4.3"
 rand_chacha = "0.9.0"
@@ -42,6 +42,9 @@ objc2 = "0.6.1"
 objc2-app-kit = "0.3.1"
 objc2-foundation = "0.3.1"
 objc2-web-kit = "0.3.1"
+
+[target.'cfg(target_os = "windows")'.dependencies]
+wmi = { version = "0.17.2", default-features = false }
 
 [build-dependencies]
 winresource = "0.1"
