--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ sevenz-rust2 = { version = "0.18.0", default-features = false, features = [
     "util",
 ] }
 socket2 = "0.6.0"
-winapi = { version = "0.3.9", default-features = false, features = ["winbase", "wincon", "handleapi", "processenv", "consoleapi", "sysinfoapi", "tlhelp32", "synchapi", "processthreadsapi", "minwindef", "winnt"] }
+winapi = { version = "0.3.9", default-features = false, features = ["winbase", "wincon", "handleapi", "processenv", "consoleapi", "sysinfoapi", "tlhelp32", "synchapi", "processthreadsapi", "minwindef", "winnt", "psapi", "ntdef", "libloaderapi"] }
 reqwest = { version = "0.12.22", default-features = false, features = ["charset", "http2", "rustls-tls", "deflate", "blocking"] }
 timestamp = { path = "timestamp" }
 hex = "0.4.3"
