--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ objc2-foundation = "0.3.1"
 objc2-web-kit = "0.3.1"
 
 [target.'cfg(target_os = "windows")'.dependencies]
-wmi = { version = "0.17.2", default-features = false }
+winreg = "0.55.0"
 
 [build-dependencies]
 winresource = "0.1"
