--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,8 +46,9 @@ jobs:
           rustup target add --toolchain nightly x86_64-pc-windows-msvc
           rustup component add rust-src --toolchain nightly-x86_64-pc-windows-msvc
           cargo +nightly build --release \
+            -Z unstable-options -C panic=immediate-abort \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
-            -Z build-std-features=default,panic_immediate_abort,optimize_for_size
+            -Z build-std-features=default,optimize_for_size
       - name: Upload Artifact
         run: |
           source="terracotta-${TERRACOTTA_VERSION}-windows-x86_64.exe"
@@ -74,8 +75,9 @@ jobs:
           rustup target add --toolchain nightly aarch64-pc-windows-msvc
           rustup component add rust-src --toolchain nightly-aarch64-pc-windows-msvc
           cargo +nightly build --release \
+            -Z unstable-options -C panic=immediate-abort \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
-            -Z build-std-features=default,panic_immediate_abort,optimize_for_size
+            -Z build-std-features=default,optimize_for_size
       - name: Install 7z
         run: choco install 7zip
       - name: Upload Artifact
@@ -104,8 +106,9 @@ jobs:
           rustup target add --toolchain nightly x86_64-unknown-linux-gnu
           rustup component add rust-src --toolchain nightly-x86_64-unknown-linux-gnu
           cargo +nightly build --release \
+            -Z unstable-options -C panic=immediate-abort \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
-            -Z build-std-features=default,panic_immediate_abort,optimize_for_size
+            -Z build-std-features=default,optimize_for_size
       - name: Upload Artifact
         run: |
           source="terracotta-${TERRACOTTA_VERSION}-linux-x86_64"
@@ -146,8 +149,9 @@ jobs:
           rustup target add --toolchain nightly aarch64-unknown-linux-gnu
           rustup component add rust-src --toolchain nightly-aarch64-unknown-linux-gnu
           cargo +nightly build --release \
+            -Z unstable-options -C panic=immediate-abort \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
-            -Z build-std-features=default,panic_immediate_abort,optimize_for_size
+            -Z build-std-features=default,optimize_for_size
       - name: Upload Artifact
         run: |
           source="terracotta-${TERRACOTTA_VERSION}-linux-arm64"
@@ -188,8 +192,9 @@ jobs:
           rustup target add --toolchain nightly x86_64-apple-darwin
           rustup component add rust-src --toolchain nightly-x86_64-apple-darwin
           cargo +nightly build --release \
+            -Z unstable-options -C panic=immediate-abort \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
-            -Z build-std-features=default,panic_immediate_abort,optimize_for_size
+            -Z build-std-features=default,optimize_for_size
       - name: Upload Artifact
         run: |
           source="terracotta-${TERRACOTTA_VERSION}-macos-x86_64"
@@ -239,8 +244,9 @@ jobs:
           rustup target add --toolchain nightly aarch64-apple-darwin
           rustup component add rust-src --toolchain nightly-aarch64-apple-darwin
           cargo +nightly build --release \
+            -Z unstable-options -C panic=immediate-abort \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
-            -Z build-std-features=default,panic_immediate_abort,optimize_for_size
+            -Z build-std-features=default,optimize_for_size
       - name: Upload Artifact
         run: |
           source="terracotta-${TERRACOTTA_VERSION}-macos-arm64"
