--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,7 +45,7 @@ jobs:
         run: |
           rustup target add --toolchain nightly x86_64-pc-windows-msvc
           rustup component add rust-src --toolchain nightly-x86_64-pc-windows-msvc
-          cargo +nightly build --release \
+          cargo +nightly build --release --target $(rustc --print host-tuple) \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
             -Z build-std-features=default,optimize_for_size
         env:
@@ -75,7 +75,7 @@ jobs:
         run: |
           rustup target add --toolchain nightly aarch64-pc-windows-msvc
           rustup component add rust-src --toolchain nightly-aarch64-pc-windows-msvc
-          cargo +nightly build --release \
+          cargo +nightly build --release --target $(rustc --print host-tuple) \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
             -Z build-std-features=default,optimize_for_size
         env:
@@ -151,7 +151,7 @@ jobs:
         run: |
           rustup target add --toolchain nightly aarch64-unknown-linux-gnu
           rustup component add rust-src --toolchain nightly-aarch64-unknown-linux-gnu
-          cargo +nightly build --release \
+          cargo +nightly build --release --target $(rustc --print host-tuple) \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
             -Z build-std-features=default,optimize_for_size
         env:
@@ -195,7 +195,7 @@ jobs:
         run: |
           rustup target add --toolchain nightly x86_64-apple-darwin
           rustup component add rust-src --toolchain nightly-x86_64-apple-darwin
-          cargo +nightly build --release \
+          cargo +nightly build --release --target $(rustc --print host-tuple) \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
             -Z build-std-features=default,optimize_for_size
         env:
@@ -248,7 +248,7 @@ jobs:
         run: |
           rustup target add --toolchain nightly aarch64-apple-darwin
           rustup component add rust-src --toolchain nightly-aarch64-apple-darwin
-          cargo +nightly build --release \
+          cargo +nightly build --release --target $(rustc --print host-tuple) \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
             -Z build-std-features=default,optimize_for_size
         env:
