--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -53,7 +53,7 @@ jobs:
       - name: Upload Artifact
         run: |
           source="terracotta-${TERRACOTTA_VERSION}-windows-x86_64.exe"
-          cp "target/release/terracotta.exe" "$source"
+          cp "target/$(rustc --print host-tuple)/release/terracotta.exe" "$source"
           7z a "$source.zip" "$source"
           cat "$source.zip" | gh-actions-artifact-client.js upload "$source"
   build-windows-arm64:
@@ -85,7 +85,7 @@ jobs:
       - name: Upload Artifact
         run: |
           source="terracotta-${TERRACOTTA_VERSION}-windows-arm64.exe"
-          cp "target/release/terracotta.exe" "$source"
+          cp "target/$(rustc --print host-tuple)/release/terracotta.exe" "$source"
           7z a "$source.zip" "$source"
           cat "$source.zip" | gh-actions-artifact-client.js upload "$source"
   build-linux-x86_64:
@@ -116,7 +116,7 @@ jobs:
         run: |
           source="terracotta-${TERRACOTTA_VERSION}-linux-x86_64"
           
-          cp "target/release/terracotta" "$source"
+          cp "target/$(rustc --print host-tuple)/release/terracotta" "$source"
           chmod 755 "$source"
           tar -cf "$source.tar" "$source"
           zip -q - "$source.tar" | gh-actions-artifact-client.js upload "$source.tar"
@@ -126,7 +126,7 @@ jobs:
           ./linux-deploy.AppImage --appdir="$(mktemp -d)" \
             --desktop-file=build/linux/terracotta.desktop \
             --icon-file=build/linux/icon.png \
-            -e "target/release/terracotta" \
+            -e "target/$(rustc --print host-tuple)/release/terracotta" \
             --output=appimage
           
           mv "Terracotta-x86_64.AppImage" "$source.AppImage"
@@ -160,7 +160,7 @@ jobs:
         run: |
           source="terracotta-${TERRACOTTA_VERSION}-linux-arm64"
           
-          cp "target/release/terracotta" "$source"
+          cp "target/$(rustc --print host-tuple)/release/terracotta" "$source"
           chmod 755 "$source"
           tar -cf "$source.tar" "$source"
           zip -q - "$source.tar" | gh-actions-artifact-client.js upload "$source.tar"
@@ -170,7 +170,7 @@ jobs:
           ./linux-deploy.AppImage --appdir="$(mktemp -d)" \
             --desktop-file=build/linux/terracotta.desktop \
             --icon-file=build/linux/icon.png \
-            -e "target/release/terracotta" \
+            -e "target/$(rustc --print host-tuple)/release/terracotta" \
             --output=appimage
          
           mv "Terracotta-aarch64.AppImage" "$source.AppImage"
@@ -204,7 +204,7 @@ jobs:
         run: |
           source="terracotta-${TERRACOTTA_VERSION}-macos-x86_64"
           
-          cp "target/release/terracotta" "$source"
+          cp "target/$(rustc --print host-tuple)/release/terracotta" "$source"
           chmod 755 "$source"
           tar -cf "$source.tar" "$source"
           zip -q - "$source.tar" | gh-actions-artifact-client.js upload "$source.tar"
@@ -215,7 +215,7 @@ jobs:
           
           cp -R build/macos/terracotta.app "$TEMP_DIR"
           mkdir -p "$TEMP_DIR/terracotta.app/Contents/MacOS/"
-          cp "target/release/terracotta" "$TEMP_DIR/terracotta.app/Contents/MacOS/terracotta"
+          cp "target/$(rustc --print host-tuple)/release/terracotta" "$TEMP_DIR/terracotta.app/Contents/MacOS/terracotta"
           
           chmod -R 755 "$TEMP_DIR/"
           PKG_OUTPUT="$source.pkg"
@@ -257,7 +257,7 @@ jobs:
         run: |
           source="terracotta-${TERRACOTTA_VERSION}-macos-arm64"
           
-          cp "target/release/terracotta" "$source"
+          cp "target/$(rustc --print host-tuple)/release/terracotta" "$source"
           chmod 755 "$source"
           tar -cf "$source.tar" "$source"
           zip -q - "$source.tar" | gh-actions-artifact-client.js upload "$source.tar"
@@ -268,7 +268,7 @@ jobs:
           
           cp -R build/macos/terracotta.app "$TEMP_DIR"
           mkdir -p "$TEMP_DIR/terracotta.app/Contents/MacOS/"
-          cp "target/release/terracotta" "$TEMP_DIR/terracotta.app/Contents/MacOS/terracotta"
+          cp "target/$(rustc --print host-tuple)/release/terracotta" "$TEMP_DIR/terracotta.app/Contents/MacOS/terracotta"
           
           chmod -R 755 "$TEMP_DIR/"
           PKG_OUTPUT="$source.pkg"
