--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -2,7 +2,7 @@ name: Deploy Sites
 on:
   push:
     paths:
-      - 'sites/**'
+      - 'docs/**'
       - '.github/workflows/docs.yaml'
   workflow_dispatch:
 
@@ -14,12 +14,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@main
 
       - name: Deploy MkDocs
         uses: mhausenblas/mkdocs-deploy-gh-pages@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CONFIG_FILE: sites/mkdocs.yml
-          WORKING_DIR: sites
-          REQUIREMENTS: sites/requirements.txt
+          CONFIG_FILE: mkdocs.yml
+          WORKING_DIR: docs
+          REQUIREMENTS: requirements.txt
