--- a/.github/workflows/gitee.yaml
+++ b/.github/workflows/gitee.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install NPM Dependencies
-        run: npm install axios --no-save
+        run: npm install --no-save got form-data
       - name: Publish Releases to Mirrors
         uses: actions/github-script@v8
         with:
